[project]
name = "vqek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fsspec>=2025.12.0",
    "h5py>=3.15.1",
    "numpy<2.0.0",
    "pennylane>=0.43.1",
    "pyscf>=2.11.0",
    "qiskit==1.0.2",
    "qiskit-aer<0.14.0",
    "qiskit-algorithms>=0.3.0",
    "qiskit-nature>=0.7.2",
    "scipy>=1.16.3",
]
